--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -3,8 +3,9 @@
   flex-direction: row;
   align-items: center;
   height: 50px;
-  width: 100vw;
   justify-content: space-between;
+  background-color: lightgray;
+  border: 1px solid black;
 }
 
 .title {
