--- a/src/style/MyOrder.css
+++ b/src/style/MyOrder.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   border: 1px solid black;
+  margin: 24px;
 }
 
 .cart-header {
@@ -12,6 +13,12 @@
   align-items: center;
   width: 100%;
   background-color: burlywood;
+}
+.cart-header > h2 {
+  margin-left: 10px;
+}
+.cart-header > div {
+  margin-right: 10px;
 }
 
 .cart-item-body {
