Adding counter in header to get more clarity on items added in cart.

--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -20,5 +20,16 @@
   width: 300px;
   margin: 10px;
   padding: 10px;
+}
 
+.cart-counter {
+  position: relative;
+  color: white;
+  background: red;
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  border-radius: 12px;
+  text-align: center;
+  right: 5px;
 }
